feat: create folder to components

--- a/components/components.templ
+++ b/components/components.templ
@@ -1,8 +1,8 @@
-package main
+package components
 
 import "strconv"
 
-templ counts(global, session int) {
+templ Counts(global, session int) {
    <html>
       <body>
          <script src="https://unpkg.com/htmx.org@1.9.10"></script>
