--- a/views/partials/navbar.partial.templ
+++ b/views/partials/navbar.partial.templ
@@ -4,7 +4,7 @@ templ Navbar(fromProtected bool, username string) {
 	<nav class="navbar bg-red-500 text-primary-content fixed top-0 z-10">
 		<div class="navbar-start">
 			<a hx-swap="transition:true" class="btn btn-ghost text-xl" href="/">
-				Todo List
+				Todo App
 			</a>
 		</div>
 		<div class="navbar-end">
