--- a/views/partials/navbar.partial.templ
+++ b/views/partials/navbar.partial.templ
@@ -1,10 +1,10 @@
 package partials
 
 templ Navbar(fromProtected bool, username string) {
-	<nav class="navbar bg-red-500 text-primary-content fixed top-0 z-10">
+	<nav class="navbar bg-blue-500 text-primary-content fixed top-0 z-10">
 		<div class="navbar-start">
 			<a hx-swap="transition:true" class="btn btn-ghost text-xl" href="/">
-				Todo App
+				Todo List
 			</a>
 		</div>
 		<div class="navbar-end">
