--- a/views/partials/navbar.partial.templ
+++ b/views/partials/navbar.partial.templ
@@ -28,7 +28,7 @@ templ Navbar(fromProtected bool, username string) {
 			} else {
             <div class="flex items-center gap-2">        
                <a hx-swap="transition:true" class="bg-pink-900 hover:bg-pink-600 text-neutral-100 px-4 py-1 gap-1 md:px-6 md:py-3 gap-3 text-md rounded-md transition-all" href="/register">
-                  Register
+                  Criar conta
                </a>
                <a hx-swap="transition:true" class="hover:bg-pink-600 text-neutral-100 px-4 py-1 gap-1 md:px-6 md:py-3 gap-3 text-md rounded-md transition-all border border-pink-900 text-pink-900 hover:text-neutral-100" href="/login">
                   Login
